--- a/senacCalendar2018.html
+++ b/senacCalendar2018.html
@@ -5,6 +5,6 @@
 	<meta charset="UTF-8" />
 </head>
 <body>
-	<a href="http://www.senacrs.com.br/pdf/calendario_academico_2018_63.pdf" target="_blank">CALENDÁRIO ACADÊMICO FSPOA – 1º SEMESTRE DE 2018</a>
+	<a href="http://www.senacrs.com.br/pdf/calendario_academico_2018_63.pdf" target="_blank">CALENDÁRIO ACADÊMICO FSPOA 2018</a>
 </body>
 </html>
