Alteração do título da página

--- a/senacCalendar2018.html
+++ b/senacCalendar2018.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-	<title>CALENDÁRIO ACADÊMICO FSPOA</title>
+	<title>CALENDÁRIO ACADÊMICO FSPOA NO ANO DE 2018</title>
 	<meta charset="UTF-8" />
 </head>
 <body>
